# ai-news-aggregator

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
app/: __init__.py  config.py  daily_runner.py  runner.py  tempCodeRunnerFile.py
app/agent/: base.py  curator_agent.py  digest_agent.py  email_agent.py
app/database/: add_x_markdown_column.py  check_connection.py  create_tables.py  models.py  repository.py
app/profiles/: user_profile.py
app/scrapers/: __init__.py  anthropic.py  base.py  openai.py  x.py  youtube.py
app/services/: base.py  email_service.py  process_anthropic.py  process_curator.py  process_digest.py  process_email.py  process_x.py  process_youtube.py
