[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "AI-powered news aggregator that scrapes YouTube channels and blog posts, generates daily digests, and sends email summaries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "trafilatura>=1.6.0",
    "lxml>=5.0.0",
    "youtube-transcript-api>=1.2.3",
    "pydantic>=2.0.0",
    "docling>=2.65.0",
    "markdown>=3.10",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
